# WiseHome

./: .$voice.drawio.bkp  .$未命名绘图.drawio.bkp  .$未命名绘图.drawio.dtmp  .gitignore  example_claude.py  main copy.py  main.py  memory_store.py  pyproject.toml  readme.md  requirements.txt  template.py  try.py  try1.py  try2.py  try_stream.py  wisehome_control.py  workflow.drawio  未命名绘图.drawio
config/: constants.py  prompts copy.py  prompts.py
core/: example_by_qwen.py  logger.py  loop.py  microphone.py  model.py  speech copy.py  speech.py  speech_recognition.py  tts.py  utils.py  workflow.py
core/examples/: another_type_recognition.py  chatgpt_vad.py  speech_recognition_claude.py  speech_recognition_trae.py  vad_new_recognition.py
data/: store.json
db/: chats.py  connection.py  users.py
doc/: .$voice.drawio.bkp  voice.drawio
mcp_servers/: memory_store.py  wisehome_control.py
models/: user_model.py
schemas/: device_definitions.py
test/: test_dict.py  test_invoke_messages.py  test_keyword.py  test_keyword_backup.py  test_kws.py  test_logger.py  test_react_output.py  test_tts.py  test_vad.py  test_vad_model.py  try_numpy.py  try_request_context.py  try_router.py  try_tool_calling.py  try_tool_calling_workflow.py
test/play/: tts.py
utils/: logger.py
voice/: recognizer.py  tts.py
