[project]
name = "wisehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "async-timeout==4.0.3",
    "attrs==25.4.0",
    "authlib==1.6.6",
    "backports-tarfile==1.2.0",
    "beartype==0.22.9",
    "cachetools==7.0.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "croniter==6.0.0",
    "cryptography==46.0.4",
    "cyclopts==4.5.1",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "docutils==0.22.4",
    "dotenv==0.9.9",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.1",
    "fakeredis==2.33.0",
    "fastmcp==2.14.5",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.0",
    "jaraco-functools==4.4.0",
    "jiter==0.13.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonref==1.1.0",
    "jsonschema==4.26.0",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "keyring==25.7.0",
    "langchain==1.2.8",
    "langchain-classic==1.0.1",
    "langchain-core==1.2.8",
    "langchain-mcp-adapters==0.2.1",
    "langchain-mongodb==0.11.0",
    "langchain-openai==1.1.7",
    "langchain-text-splitters==1.1.0",
    "langgraph==1.0.7",
    "langgraph-checkpoint>=2.0.23,<3.0.0",
    "langgraph-checkpoint-mongodb>=0.2.1",
    "langgraph-prebuilt==1.0.7",
    "langgraph-sdk==0.3.3",
    "langsmith==0.6.8",
    "lark==1.3.1",
    "lupa==2.6",
    "markdown-it-py==4.0.0",
    "mcp==1.26.0",
    "mdurl==0.1.2",
    "numpy==2.4.2",
    "more-itertools==10.8.0",
    "openai==2.16.0",
    "openapi-pydantic==0.5.1",
    "opentelemetry-api==1.39.1",
    "orjson==3.11.7",
    "ormsgpack==1.12.2",
    "packaging==26.0",
    "pathable==0.4.4",
    "pathvalidate==3.3.1",
    "platformdirs==4.5.1",
    "prometheus-client==0.24.1",
    "py-key-value-aio==0.3.0",
    "py-key-value-shared==0.3.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pydocket==0.17.5",
    "pygments==2.19.2",
    "pyjwt==2.11.0",
    "pymongo>=4.9,<4.16",
    "pymongo-search-utils==0.3.0",
    "pyperclip==1.11.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-json-logger==4.0.0",
    "python-multipart==0.0.22",
    "pytz==2025.2",
    "pywin32==311",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.3",
    "redis==7.1.0",
    "referencing==0.36.2",
    "regex==2026.1.15",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.3.2",
    "rich-rst==1.3.2",
    "rpds-py==0.30.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "sortedcontainers==2.4.0",
    "sounddevice>=0.5.5",
    "sqlalchemy==2.0.46",
    "sse-starlette==3.2.0",
    "starlette==0.52.1",
    "taskgroup==0.2.2",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tomli==2.4.0",
    "tqdm==4.67.3",
    "typer==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.0",
    "uvicorn==0.40.0",
    "websockets==16.0",
    "xxhash==3.6.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
    "faster-qwen3-tts>=0.2.5",
    "funasr>=1.3.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]
torchaudio = [{ index = "pytorch-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://mirrors.aliyun.com/pytorch-wheels/cu126/"
explicit = true
